@@ -1,0 +1,1 @@
+A complete and consistent functional programming toolkit for R.
