@@ -1,0 +1,17 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 16:20:54 brook Exp $
+
+R_PKGNAME=	purrr
+R_PKGVER=	0.3.2
+CATEGORIES=	devel
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Functional programming tools
+LICENSE=	gnu-gpl-v3
+
+DEPENDS+=	R-magrittr>=1.5:../../devel/R-magrittr
+DEPENDS+=	R-rlang>=0.3.1:../../devel/R-rlang
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
